--- a/Javascript/20_FetchAPI.html
+++ b/Javascript/20_FetchAPI.html
@@ -83,26 +83,48 @@
         Response.json()           | 응답 본문을 JSON으로 파싱한 결과로 이행하는 프로미스를 반환한다. (JSON)
         Response.text()           | 응답 본문의 Text 표현으로 이행하는 프로미스를 반환한다. (Text, XML)
 -->
-
 <h4>blob 리소스 요청과 응답</h4>
 <div>
-<button type = "button" id = "blob-btn">blob</button>
-<br><br>
-<img id = "blob-image" width = "192px">
+  <button type="button" id="blob-btn">blob</button>
+  <br><br>
+  <img id="blob-image" width="192px">
 </div>
 <script>
-document.getElementById('blob-btn').addEventListener('click', function(event){
-  fetch('../assets/images/flower1.jpg', {method:'GET'})
-    .then(response => {
-      if(!response.ok) {
-        throw new Error(response.status);
-      }
-      return response.blob(); // 이미지의 이진데이터, then의 return 값은 그 다음 then의 매개변수가 된다.
-    })
-    .then(binaryImage => {
-      document.getElementById('blob-image').src = URL.createObjectURL('click',)
-    })
-})
+  
+  document.getElementById('blob-btn').addEventListener('click', function(event) {
+    fetch('../assets/images/flower1.jpg', { method: 'GET' })
+      .then(response => {
+        if(!response.ok) {
+          throw new Error(response.status);
+        }
+        return response.blob();  // 이미지의 이진 데이터
+      })
+      .then(binaryImage => {
+        document.getElementById('blob-image').src = URL.createObjectURL(binaryImage);
+      })
+      .catch(status => console.log(status));
+  })
+  
+  document.getElementById('blob-btn').addEventListener('click', function(event) {
+    fetch(new Request('../assets/images/flower1.jpg', { method: 'GET' }))
+      .then(response => response.blob())
+      .then(binaryImage => document.getElementById('blob-image').src = URL.createObjectURL(binaryImage));
+  })
+
+</script>
+<hr>
+
+<h4>json 리소스 요청과 응답</h4>
+<div>
+  <button type="button" id="json-btn">json</button>
+</div>
+<script>
+
+  document.getElementById('json-btn').addEventListener('click', function(event) {
+    fetch('https://thetestrequest.com/authors/1', { method: 'GET' })
+      .then(response => response.json())
+      .then(responseData => console.log(responseData));
+  })
 
 </script>
 <hr>
@@ -113,14 +135,20 @@ document.getElementById('blob-btn').addEventListener('click', function(event){
 </div>
 <script>
 
-// document.getElementById('xml-btn').addEventListener('click',function(event){
-//   fetch('https://thetestrequest.com/authors/1.xml', {method : 'GET'})}
-//   .then(response => response.text())
-//   .then(responseData=> {
-//     const xmlDocument = new DOMparser().parseFromString(responseData,'xml')}
-//   )
+  document.getElementById('xml-btn').addEventListener('click', function(event) {
+    fetch('https://thetestrequest.com/authors/1.xml', { method: 'GET' })
+      .then(response => response.text())
+      .then(responseData => {
+        // 텍스트 형식의 XML 데이터를 XML 문서로 변환하는 코드
+        const xmlDocument = new DOMParser().parseFromString(responseData, 'application/xml');
+        console.log(xmlDocument);
+        console.log(xmlDocument.getElementsByTagName('hash')[0]);
+      })
+  })
+
 </script>
 <hr>
+
 <!--
     async 함수
 
@@ -148,6 +176,24 @@ document.getElementById('blob-btn').addEventListener('click', function(event){
     3. async 함수가 아닌 곳에서 사용하면 SyntaxError 가 발생한다.
     4. await 문이 없는 async 함수는 일반 함수처럼 동기적으로 실행된다.
 -->
+<h4>async 함수와 await 문</h4>
+<div>
+  <button type="button" id="async-btn">async</button>
+</div>
+<script>
+
+  async function asyncDeclare() {
+    // fetch 수행 결과를 받아올때까지 기다렸다가 실행된다.
+    const response = await fetch('https://thetestrequest.com/authors/1.xml', { method: 'GET' });
+    const responseData = await response.text();
+    const xmlDocument = new DOMParser().parseFromString(responseData, 'application/xml');
+    console.log(xmlDocument);
+  }
+
+  document.getElementById('async-btn').addEventListener('click', asyncDeclare);
+
+</script>
+<hr>
 
 
 
@@ -159,27 +205,29 @@ document.getElementById('blob-btn').addEventListener('click', function(event){
   <div><button type="button" id="login-btn">Log In</button></div>
 </form>
 <script>
-  
   /*
     fetch() 함수를 이용하여 다음 조건에 따라 로그인을 요청하는 코드를 작성하시오.
     1. 요청 url       : /user/login.do
     2. 요청 method    : post
     3. 요청 parameter : login-form 내부의 입력 요소
   */
-document.getElementById('login-btn').addEventListener('click', function(event){
-  const loginForm = new FormData(document.getElementById('login-form'));
-  fetch('/user/login.do', {
-    method : 'POST',
-    body : loginForm,
+  document.getElementById('login-btn').addEventListener('click', function(event) {
+    const loginForm = new FormData(document.getElementById('login-form'));
+    fetch('/user/login.do', {
+      method: 'POST',
+      body: loginForm,
+    })
+    /*
+    const entries = loginForm.entries();
+    while( (element = entries.next()).done === false) {
+      console.log(element.value);  // ['id', 'admin']
+    }
+    for(const [name, value] of entries) {
+      console.log(name, value);  // id admin
+    }
+    */
   })
-  // const entries = loginForm.entries();
-  // while( (element= entries.next()).done === false) {
-  //   console.log(element.value);
-  // }
-  // for(const [name, value] of entries) {
-  //   console.log(name, value);
-  // }
-})
+
 </script>
 <hr>
 
@@ -215,6 +263,36 @@ document.getElementById('login-btn').addEventListener('click', function(event){
       async 함수와 await 문을 반드시 사용하시오.
   */
   
+  /*
+  const form = new FormData();     // <form></form>
+  form.append('username', 'kim');  // <form><input name="username" value="kim"></form>
+  */
+
+  async function upload() {
+
+    const username = document.getElementById('username').value;
+    const profile = document.getElementById('profile').files[0];
+
+    const form = new FormData();
+    form.append('username', username);
+    form.append('profile', profile);
+
+    const response = await fetch('/user/profileUpload.do', {
+      method: 'POST',
+      body: form,
+    })
+
+    const responseData = await response.json();
+    if(responseData.isSuccess) {
+      alert('프로필이 업로드되었습니다.');
+    } else {
+      alert('프로필이 업로드 되지 않았습니다.');
+    }
+
+  }
+
+  document.getElementById('upload-btn').addEventListener('click', upload);
+
 </script>
 <hr>
 
